--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
     margin:0;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 body > header{
@@ -29,12 +30,35 @@ body > header > nav > ul > li > a{
     color:white;
 }
 
+#grid-container{
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr;
+    height:auto;
+}
+
 #login-section{
-    margin-left: 10%;
+    margin-left: 30%;
+    grid-row-start:1;
+    grid-row-end:2;
+    
 }
 
 #categories{
-    margin-left: 10%;
+    margin-left: 30%;
+    grid-column-start:1;
+    grid-column-end:2;
+    grid-row-start:2;
+    grid-row-end:4;
+    
+}
+
+#latest{
+    grid-column-start:2;
+    grid-column-end:4;
+    grid-row-start:1;
+    grid-row-end:4;
+    margin-right:30%;
 }
 
 .story{
